@@ -74,22 +74,32 @@
 
     <build>
         <plugins>
-            <!-- Surefire Plugin (لتشغيل التستات) -->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
                     
+                    <argLine>
+                        @{argLine} 
+                        --add-opens javafx.graphics/javafx.scene=ALL-UNNAMED 
+                        --add-opens javafx.controls/javafx.scene.control=ALL-UNNAMED
+                        --add-opens javafx.base/javafx.collections=ALL-UNNAMED
+                        -Djava.awt.headless=true
+                        -Dtestfx.robot=glass
+                        -Dtestfx.headless=true
+                        -Dprism.order=sw
+                    </argLine>
                     <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
 
-            <!-- JaCoCo Plugin  -->
+            
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version> 
+                <version>0.8.11</version>
                 <configuration>
                     <excludes>
                         <exclude>**/mymain.class</exclude>
@@ -104,7 +114,7 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>verify</phase>
+                        <phase>test</phase> 
                         <goals>
                             <goal>report</goal>
                         </goals>
